# etcd-cloud-operator

./: .gitignore  BUILD.bazel  Dockerfile  WORKSPACE  go.mod  go.sum
cmd/operator/: BUILD.bazel  config.go  operator.go
cmd/tester/: BUILD.bazel
pkg/etcd/: BUILD.bazel  client.go  misc.go  server.go
pkg/logger/: BUILD.bazel
pkg/operator/: BUILD.bazel  misc.go  operator.go
pkg/providers/: BUILD.bazel
pkg/providers/asg/: BUILD.bazel
pkg/providers/asg/aws/: BUILD.bazel
pkg/providers/asg/docker/: BUILD.bazel
pkg/providers/asg/sts/: BUILD.bazel  k8s.go  sts.go
pkg/providers/snapshot/: BUILD.bazel
pkg/providers/snapshot/etcd/: BUILD.bazel
pkg/providers/snapshot/file/: BUILD.bazel
pkg/providers/snapshot/s3/: BUILD.bazel
pkg/tester/: BUILD.bazel  client.go  tester.go
