load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tester_lib",
    srcs = [
        "config.go",
        "tester.go",
    ],
    importpath = "github.com/quentin-m/etcd-cloud-operator/cmd/tester",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/logger",
        "//pkg/tester",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_binary(
    name = "tester",
    embed = [":tester_lib"],
    visibility = ["//visibility:public"],
)
