load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "tester",
    srcs = [
        "client.go",
        "metrics.go",
        "stresser.go",
        "test_cases.go",
        "tester.go",
    ],
    importpath = "github.com/quentin-m/etcd-cloud-operator/pkg/tester",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/etcd",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@io_etcd_go_etcd_api_v3//etcdserverpb",
        "@io_etcd_go_etcd_client_v3//:client",
        "@org_golang_x_crypto//ssh",
        "@org_golang_x_crypto//ssh/agent",
        "@org_golang_x_time//rate",
        "@org_uber_go_zap//:zap",
    ],
)
