load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "aws",
    srcs = ["aws.go"],
    importpath = "github.com/quentin-m/etcd-cloud-operator/pkg/providers/asg/aws",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/providers/asg",
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//aws/ec2metadata",
        "@com_github_aws_aws_sdk_go//aws/session",
        "@com_github_aws_aws_sdk_go//service/autoscaling",
        "@com_github_aws_aws_sdk_go//service/ec2",
    ],
)
