load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "docker",
    srcs = [
        "container.go",
        "docker.go",
    ],
    importpath = "github.com/quentin-m/etcd-cloud-operator/pkg/providers/asg/docker",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/providers",
        "//pkg/providers/asg",
        "@org_uber_go_zap//:go_default_library",
    ],
)
