load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "file",
    srcs = ["file.go"],
    importpath = "github.com/quentin-m/etcd-cloud-operator/pkg/providers/snapshot/file",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/providers",
        "//pkg/providers/snapshot",
        "@org_uber_go_zap//:zap",
    ],
)
