load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "s3",
    srcs = ["s3.go"],
    importpath = "github.com/quentin-m/etcd-cloud-operator/pkg/providers/snapshot/s3",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/providers",
        "//pkg/providers/snapshot",
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//aws/ec2metadata",
        "@com_github_aws_aws_sdk_go//aws/session",
        "@com_github_aws_aws_sdk_go//service/s3",
        "@com_github_aws_aws_sdk_go//service/s3/s3manager",
        "@org_uber_go_zap//:zap",
    ],
)
